--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
-<!DOCTYPE html>
-<html>
-
 <head>
-	<meta charset="UTF-8">
-	<title>Hello World!</title>
+
 </head>
 
 <body>
-	<h1>Hello World!</h1>
-	We are using node <script>document.write(process.versions.node)</script>, 
-	Chrome <script>document.write(process.versions.chrome)</script>, 
-	and Electron <script>document.write(process.versions.electron)</script>.
-</body>
+	<h1>My Todos</h1>
+	<ul></ul>
 
-</html>
+	<script>
+		const { ipcRenderer } = require('electron');
+
+		ipcRenderer.on('todo:add', (event, arg) => {
+			const li = document.createElement('li');
+			const text = document.createTextNode(arg);
+
+			li.appendChild(text);
+			document.querySelector('ul').appendChild(li);
+		});
+
+		ipcRenderer.on('todo:clear', (event) => {
+			document.querySelectorAll('li').forEach(e => e.parentNode.removeChild(e));
+		});
+	</script>
+</body>
